@@ -1,20 +1,0 @@
-Psyco is a specializing compiler. In a few words let us first see:
-
-What you can do with it
-
-In short: run your existing Python software much faster, with no change in
-your source.
-Think of Psyco as a kind of just-in-time (JIT) compiler, a little bit like
-Java's, that emit machine code on the fly instead of interpreting your Python
-program step by step. The result is that your unmodified Python programs run
-faster.
-
-Benefits
-2x to 100x speed-ups, typically 4x, with an unmodified Python interpreter and
-unmodified source code, just a dynamically loadable C extension module.
-
-Drawbacks
-Psyco currently uses quite a lot of memory. It only runs on Intel
-386-compatible processors (under any OS) right now. There are some subtle
-semantic differences (i.e. bugs) with the way Python works; they should not be
-apparent in most programs.
